--- a/eProdaja/eProdaja/appsettings.json
+++ b/eProdaja/eProdaja/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-G32L2E3;Initial Catalog=eProdaja; Integrated Security=True;TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
